[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "common",
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day08",
    "day09",
    "day10",
    "day11",
    "day13",
    "day14",
]